optional params + date-time parsing
